@@ -20,6 +20,7 @@
         <file>images/resultset_next.png</file>
         <file>images/script.png</file>
         <file>images/script_go.png</file>
+        <file>images/support_button.png</file>
         <file>images/transmit_blue.png</file>
     </qresource>
     <qresource prefix="/error" >
