@@ -6,9 +6,12 @@
 - Added "Minimize to System tray" option (accessible from trayIcon->Options->Minimize to System tray)
 - Added "Paste URL from Clipboard" button in "Add Video" form
 - Added "Time Remaining" for video conversions
-- Added: After a new instalation, the program check for new updates
+- Added After a new instalation, the program check for new updates
+- Added "Support this project" button in "Information" form
 
 - Updated ProgressBar class (now is more configurable)
+- Updated Spanish (ES) language file
+- Updated Catalan (CAT) language file 
 
 1.7.1a:
 -------
